[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsswinir"
version = "1.0.0"
description = "SwinIR function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["SwinIR", "VapourSynth"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy",
  "requests",
  "timm",
  "torch>=1.13.0",
  "tqdm",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-swinir"
"Bug Tracker" = "https://github.com/HolyWu/vs-swinir/issues"
