[metadata]
name = vsswinir
version = 1.0.0
author = HolyWu
description = SwinIR function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-swinir
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    requests
    timm
    torch>=1.9.0
    tqdm

[options.package_data]
* = *.pth
